plugins {
    id 'java'
    id 'jacoco'
    id 'checkstyle'
}

repositories {
    mavenLocal()
    maven {
        url = 'https://repo.runelite.net'
        content {
            includeGroupByRegex("net\\.runelite.*")
        }
    }
    mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'shortestpath.ShortestPathPluginTest'

dependencies {
    compileOnly "net.runelite:client:$runeLiteVersion"

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:3.4.6'
    testImplementation 'com.google.code.gson:gson:2.10.1'
    testImplementation "net.runelite:client:$runeLiteVersion"
    testImplementation "net.runelite:jshell:$runeLiteVersion"
    testImplementation("net.runelite:cache:$runeLiteVersion") {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }

}

group = 'shortestpath'


java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(11)
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(Checkstyle).configureEach {
    enabled = true
    ignoreFailures = false
}

// --- Testing ---

test {
    jvmArgs = ['-Xms1g', '-Xmx8g']
}

jacoco {
    toolVersion = "0.8.11"
}

tasks.named('jacocoTestReport', JacocoReport) {
    dependsOn tasks.named('test')
    reports {
        xml.required = true
        xml.outputLocation = layout.buildDirectory.file('reports/jacoco/test/jacocoTestReport.xml')
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/test/html')
    }
}

tasks.register('run', JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    mainClass = pluginMainClass
    jvmArgs "-ea"
    args "--developer-mode", "--debug"
}

tasks.register('shadowJar', Jar) {
    dependsOn configurations.testRuntimeClasspath
    manifest {
        attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from sourceSets.main.output
    from sourceSets.test.output
    from {
        configurations.testRuntimeClasspath.collect { file ->
            file.isDirectory() ? file : zipTree(file)
        }
    }
    exclude 'META-INF/INDEX.LIST'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude '**/module-info.class'
    group = BasePlugin.BUILD_GROUP
    archiveClassifier.set('shadow')
    archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}



